--- a/Ship-Fit/Ship-Fit/Ship-Fit-Info.plist
+++ b/Ship-Fit/Ship-Fit/Ship-Fit-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>ca.dal.cs.csci4176.ship-fit.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>cs.dal.ca.csci4176.ship-fit.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
